fixed issue with spacing of buttons on not registered pages

--- a/client/src/styles/NotRegisteredPage.scss
+++ b/client/src/styles/NotRegisteredPage.scss
@@ -62,6 +62,7 @@
     }
 
     a.btn {
+      max-width: 100%;
       display: table;
       white-space: normal;
     }
